--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../public/assets/css/burger_style.css">
     <title>Eat Da Burger</title>
 </head>
+
 <body>
+    <header>
+        <img src="../../public/assets/img/pngfuel.com (2).png" alt="burger-image">
+        <h1> Eat da Burger!</h1>
+    </header>
     {{{ body }}}
 </body>
+
 </html>
