--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/burger_style.css">
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="assets/js/burger_temp.js"></script>
     <title>Eat Da Burger</title>
 </head>
 
