added bootstrap to my app

--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,9 +1,9 @@
-body{
+.background{
     background-color: bisque;
 }
 header{
     text-align: center;
 }
 #devoured{
-    text-align: right;
+    text-decoration: line-through;
 }
